Update linuxWork.md
记录一个常用的脚本信息